# nRF5283-

./: .gitignore  README.md
I2S_Master/: CMakeLists.txt  README.rst  prj.conf
I2S_Master/src/: 2k_1.h  2k_16bit.h  2k_8bit.h  2ksine.h  I2S_master.code-workspace  ISO-1.h  ISO-2.h  ISO.h  configure.c  configure.h  main.c  meinv8k.h  sine2kHz.h  textMessage8k.h
gpio_input/: CMakeLists.txt  README.rst
gpio_input/src/: gpio.c  gpio.h  main.c  uart.c  uart.h
led_toggle/: README.rst  explanation.txt
led_toggle/src/: main.c
uart/: CMakeLists.txt  README.rst
uart/src/: main.c
